Validacion del token añadida

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,9 +25,9 @@
                 <i class="fas fa-user-circle fa-2x"></i>
             </a>
             <div class="dropdown-menu" style="background-color: black;color: blanchedalmond;">
-              <a class="dropdown-item" href="#">Login</a>
-              <a class="dropdown-item" href="#">Registro</a>
-              <a class="dropdown-item" href="#">Configuracion</a>
+              <a class="dropdown-item">Perfil</a>
+              <a class="dropdown-item">Configuracion</a>
+              <a class="dropdown-item"(click)="logOut()">Cerrar Sesion</a>
             </div>
           </li>
       </ul>
